name:                htorrent
version:             0.0.0.1
author:              Alexey Shmalko
maintainer:          Alexey Shmalko <rasen.dubi@gmail.com>
copyright:           (c) 2015, Alexey Shmalko
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Torrent, Network.BitTorrent.Tracker
  other-extensions:    OverloadedStrings, DeriveDataTypeable
  build-depends:       base == 4.*
                     , bytestring >=0.10
                     , HTTP >=4000.2
                     , bencoding >= 0.4.3
                     , cryptohash >= 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
