name:                htorrent
version:             0.0.0.1
author:              Alexey Shmalko
maintainer:          Alexey Shmalko <rasen.dubi@gmail.com>
copyright:           (c) 2015, Alexey Shmalko
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Torrent
                     , Network.BitTorrent.Client
                     , Network.BitTorrent.Peer
                     , Network.BitTorrent.Tracker
  other-extensions:    OverloadedStrings, DeriveDataTypeable
  build-depends:       base == 4.*
                     , bytestring >=0.10
                     , HTTP >=4000.2
                     , http-types
                     , bencoding >= 0.4.3
                     , cryptohash >= 0.10
                     , binary
                     , network
                     , stm
                     , stm-delay
                     , bitarray
                     , timers
                     , suspend
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind

executable client
  default-language:    Haskell2010
  hs-source-dirs:      examples
  main-is:             Client.hs
  build-depends:       base == 4.*
                     , htorrent
                     , HTTP >= 4000.2
                     , bytestring
                     , mtl
                     , either
                     , network
                     , binary
                     , stm
  ghc-options:         -Wall -fno-warn-unused-do-bind
